# simple_telegram_chatbot

./: .env  .gitignore  MEMORY.md  README.md  pyproject.toml
src/telegram_chatbot/: ai_client.py  handlers.py  main.py
