[project]
name = "telegram-chatbot"
version = "0.1.0"
description = "Telegram chatbot powered by Claude AI"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_chatbot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
